Refactore below_nav and wrapper CSS classes. Added 404 page. This commit breaks sidebar layout a bit but it was already broken so I'm ignoring that ofr now

--- a/www/src/css/_site.scss
+++ b/www/src/css/_site.scss
@@ -5,8 +5,16 @@
 }
 
 .site__main {
-  flex: 1;
+  flex: 1 0 auto;
   position: relative;
   z-index: 0;
-  @extend .below_nav;
+  margin-top: 60px;
+
+  @include breakpoint("small-") {
+    margin-top: 40px;
+  }
+
+  @include breakpoint("medium-to-large") {
+    margin-top: 50px;
+  }
 }
