--- a/www/src/css/algolia.css
+++ b/www/src/css/algolia.css
@@ -186,6 +186,40 @@
   }
 }
 
+.algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu {
+  right: 0 !important;
+  left: inherit !important;
+}
+
+.algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu:before {
+  right: 48px;
+}
+
+.algolia-autocomplete.algolia-autocomplete-left .ds-dropdown-menu {
+  left: 0 !important;
+  right: inherit !important;
+}
+
+.algolia-autocomplete.algolia-autocomplete-left .ds-dropdown-menu:before {
+  left: 48px;
+}
+
+.algolia-autocomplete .ds-dropdown-menu {
+  position: relative;
+  top: -6px;
+  border-radius: 4px;
+  margin: 6px 0 0;
+  padding: 0;
+  text-align: left;
+  height: auto;
+  position: relative;
+  background: transparent;
+  border: none;
+  z-index: 999;
+  max-width: 600px;
+  min-width: 500px;
+  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.2), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
+}
 
 .algolia-autocomplete .ds-dropdown-menu:before {
   display: block;
@@ -201,55 +235,6 @@
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
   border-radius: 2px;
-}
-
-.algolia-autocomplete .ds-dropdown-menu {
-  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.2), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
-}
-
-@media (min-width: 601px) {
-  .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu {
-    right: 0 !important;
-    left: inherit !important;
-  }
-
-  .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu:before {
-    right: 48px;
-  }
-
-  .algolia-autocomplete .ds-dropdown-menu {
-    position: relative;
-    top: -6px;
-    border-radius: 4px;
-    margin: 6px 0 0;
-    padding: 0;
-    text-align: left;
-    height: auto;
-    position: relative;
-    background: transparent;
-    border: none;
-    z-index: 999;
-    max-width: 600px;
-    min-width: 500px;
-  }
-}
-
-@media (max-width: 600px) {
-  .algolia-autocomplete .ds-dropdown-menu {
-    z-index: 100;
-    position: fixed !important;
-    top: 40px !important;
-    left: auto !important;
-    right: 1rem !important;
-    width: 600px;
-    max-width: calc(100% - 2rem);
-    max-height: calc(100% - 5rem);
-    display: block;
-  }
-
-  .algolia-autocomplete .ds-dropdown-menu:before {
-    right: 6rem;
-  }
 }
 
 .algolia-autocomplete .ds-dropdown-menu .ds-suggestions {
@@ -320,14 +305,11 @@
 .algolia-autocomplete .algolia-docsearch-suggestion--category-header {
   position: relative;
   display: none;
-  font-size: 14px;
-  letter-spacing: 0.08em;
-  font-weight: 700;
+  font-size: 1em;
   background-color: #373940;
-  text-transform: uppercase;
   color: #fff;
   margin: 0;
-  padding: 5px 8px;
+  padding: 0 8px;
 }
 
 .algolia-autocomplete .algolia-docsearch-suggestion--wrapper {
@@ -388,13 +370,6 @@
   padding: 8px 0;
   text-align: center;
   font-size: 1.2em;
-  background-color: #373940;
-  margin-top: -8px;
-}
-
-.algolia-autocomplete .algolia-docsearch-suggestion--no-results .algolia-docsearch-suggestion--text {
-  color: #ffffff;
-  margin-top: 4px;
 }
 
 .algolia-autocomplete .algolia-docsearch-suggestion--no-results::before {
@@ -408,7 +383,7 @@
   color: #222222;
   background-color: #EBEBEB;
   border-radius: 3px;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
 
 .algolia-autocomplete .algolia-docsearch-suggestion code .algolia-docsearch-suggestion--highlight {
@@ -426,7 +401,7 @@
 
 .algolia-autocomplete .algolia-docsearch-footer {
   width: 110px;
-  height: 0px;
+  height: 20px;
   z-index: 2000;
   float: right;
   font-size: 0;
