Added 'componentStackFrames' property to error info object
We pass a 'componentStack' (string) property to the injected error dialog and the 'componentDidCatch' lifecycle method. This string is pre-formatted string to match the error.stack string for logging convenience. However this approach requires parsing in order to do anything beyond basic logging.

This PR adds a new 'componentStackFrames' property to both of the above methods. It is loosely based on the TC39 error stack strawman.

In addition to adding basic tests for this property, I've also updated our fixtures to expose it.

--- a/fixtures/dom/src/style.css
+++ b/fixtures/dom/src/style.css
@@ -24,6 +24,9 @@ button {
   padding: 5px;
 }
 
+details {
+  margin: 1rem 0;
+}
 
 .header {
   background: #222;
@@ -211,4 +214,14 @@ li {
   margin: 0 -15px; /* opposite of .test-case padding */
   background-color: #f4f4f4;
   border-top: 1px solid #d9d9d9;
+}
+
+.error-info {
+  white-space: pre-wrap;
+  font-size: 12px;
+  max-height: 200px;
+  overflow: auto;
+  background: #eee;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
 }
