Use consistent font across the docs

--- a/www/src/css/reset.css
+++ b/www/src/css/reset.css
@@ -34,6 +34,6 @@ img {
   vertical-align: top;
 }
 
-pre {
+pre, code {
   font-family: source-code-pro, Menlo, Consolas, "Courier New", monospace;
 }
